--- a/Pages/Css/forgotpassword.css
+++ b/Pages/Css/forgotpassword.css
@@ -39,6 +39,13 @@ input{
     margin-top: 20px;
 }
 
+#login-link{
+    color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size:14px;
+}
+
 #error{
     color:#fff;
     font-family: 'Open Sans', sans-serif;
