--- a/Pages/dashboard/grid.css
+++ b/Pages/dashboard/grid.css
@@ -122,7 +122,7 @@ div.gridWrapper .columns.blur {
 }
 div.gridWrapper .columns .cell {
   padding: 5px;
-  border-left: 1px solid #ddd;
+  /*border-left: 1px solid #ddd;*/
   white-space: nowrap;
   height: 24px;
   position: relative;
@@ -181,12 +181,6 @@ div.gridWrapper .columns .cell.headerCell {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #e4e4e4));
-  background: -webkit-linear-gradient(top, #fff 0%, #e4e4e4 100%);
-  background: -moz-linear-gradient(top, #fff 0%, #e4e4e4 100%);
-  background: -o-linear-gradient(top, #fff 0%, #e4e4e4 100%);
-  background: -ms-linear-gradient(top, #fff 0%, #e4e4e4 100%);
-  background: linear-gradient(top, #fff 0%, #e4e4e4 100%);
   z-index: 2;
   min-width: 50px;
 }
