--- a/Pages/taskboard/grid.css
+++ b/Pages/taskboard/grid.css
@@ -15,7 +15,7 @@
   overflow: hidden;
 }
 div.gridWrapper {
-  width: 800px;
+  width: 100px !important;
   min-width: 515px;
   border: 1px solid #ddd;
   -webkit-border-radius: 4px;
@@ -199,6 +199,7 @@ div.gridWrapper .columns .cell.headerCell .sortbar {
   line-height: 9px;
   text-align: center;
   display: none;
+  background-color:red;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
