--- a/Pages/Css/login.css
+++ b/Pages/Css/login.css
@@ -1,5 +1,10 @@
-body{
-    background: rgba(115,0,10,1);
+body{    
+    background-image: url('../../Resources/Images/Horseshoe.jpg');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background: rgba(115,0,10,.5);
     background: -moz-linear-gradient(left, rgba(115,0,10,1) 0%, rgba(151,8,20,1) 100%);
     background: -webkit-gradient(left top, right top, color-stop(0%, rgba(115,0,10,1)), color-stop(100%, rgba(151,8,20,1)));
     background: -webkit-linear-gradient(left, rgba(115,0,10,1) 0%, rgba(151,8,20,1) 100%);
