--- a/Pages/Css/login.css
+++ b/Pages/Css/login.css
@@ -1,29 +1,28 @@
 body{    
-    background-image: url('../../Resources/Images/Horseshoe.jpg');
+    background: url('../../Resources/Images/Horseshoe.jpg');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background: rgba(115,0,10,.5);
-    background: -moz-linear-gradient(left, rgba(115,0,10,1) 0%, rgba(151,8,20,1) 100%);
-    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(115,0,10,1)), color-stop(100%, rgba(151,8,20,1)));
-    background: -webkit-linear-gradient(left, rgba(115,0,10,1) 0%, rgba(151,8,20,1) 100%);
-    background: -o-linear-gradient(left, rgba(115,0,10,1) 0%, rgba(151,8,20,1) 100%);
-    background: -ms-linear-gradient(left, rgba(115,0,10,1) 0%, rgba(151,8,20,1) 100%);
-    background: linear-gradient(to right, rgba(115,0,10,1) 0%, rgba(151,8,20,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#73000a', endColorstr='#970814', GradientType=1 );
-
 }
 
 #logo{
-    padding-top: 100px;
-    padding-bottom: 40px;
+    padding-top: 30px;
+    padding-bottom: 40px
+}
+
+.login-box{
+    margin-top: 100px;
+    background-color: rgba(0,0,0,  .4);
+        -webkit-box-shadow: 0px 0px 22px -2px rgba(0,0,0,0.8);
+    -moz-box-shadow: 0px 0px 22px -2px rgba(0,0,0,0.8);
+    box-shadow: 0px 0px 22px -2px rgba(0,0,0,0.8);
 }
 
 input{
-    background-color: #60010C;
+    background-color: #fff;
     border:none;
-    color:#fff;
+    color:#000;
     padding: 15px;
     margin-bottom: 10px;
     font-family: 'Open Sans', sans-serif;
@@ -32,8 +31,8 @@ input{
 }
 
 #login-button{
-    background-color: #fff;
-    color:#73000a;
+    background-color: #60010C;
+    color:#fff;
     padding: 15px;
     margin-top: 20px;
 }
@@ -44,6 +43,8 @@ input{
     padding: 15px;
     margin-top: 20px;
 }
+
+
 
 #forgot-link{
     color:#fff;
@@ -61,9 +62,9 @@ input{
 }
 
 #signupShow{
-    background-color: #60010C;
+    background-color: #fff;
     border:none;
-    color:#fff;
+    color:#60010C;
     padding: 15px;
     margin-bottom: 10px;
     font-family: 'Open Sans', sans-serif;
@@ -73,7 +74,7 @@ input{
 }
 
 #signupShow:hover{
-    background-color: #73000a;
+    background-color: #60010C;
     border:none;
     color:#fff;
     padding: 15px;
@@ -88,7 +89,7 @@ input{
     border:none;
     color:#fff;
     padding: 15px;
-    margin-bottom: 10px;
+    margin-bottom: 35px;
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
     font-size:18px;
@@ -114,5 +115,18 @@ input{
     margin-bottom: 10px;
 }
 
-
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    #444;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #444;
+   opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #444;
+   opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    #444;
+}
 
