--- a/Pages/Css/approvebp.css
+++ b/Pages/Css/approvebp.css
@@ -1,4 +1,21 @@
+.mvv{
+	padding-left: 30px;
+	font-size: 16px;
+}
+.texthead{
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
 
+hr{
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+
+}
 
 #list{
 	margin-top: 14px;
