--- a/Pages/blueprint/Blueprinthtml/blueprint.css
+++ b/Pages/blueprint/Blueprinthtml/blueprint.css
@@ -23,14 +23,17 @@
     panose-1:2 11 5 2 2 2 2 2 2 4;}
 /* Style Definitions */
 p.MsoNormal, li.MsoNormal, div.MsoNormal
-{margin-top:0in;
+{
+    margin-top:0in;
     margin-right:0in;
     margin-bottom:8.0pt;
     margin-left:0in;
-    font-size:11.0pt;
-    font-family:Calibri;}
+    font-size:80%;
+    font-family:Calibri;
+}
 h1
-{margin-top:12.0pt;
+{
+    margin-top:12.0pt;
     margin-right:0in;
     margin-bottom:0in;
     margin-left:0in;
@@ -38,9 +41,11 @@ h1
     font-size:16.0pt;
     font-family:"Calibri Light";
     color:#2E74B5;
-    font-weight:normal;}
+    font-weight:normal;
+}
 h2
-{margin-top:2.0pt;
+{
+    margin-top:2.0pt;
     margin-right:0in;
     margin-bottom:0in;
     margin-left:0in;
@@ -48,9 +53,11 @@ h2
     font-size:13.0pt;
     font-family:"Calibri Light";
     color:#2E74B5;
-    font-weight:normal;}
+    font-weight:normal;
+}
 h3
-{margin-top:2.0pt;
+{
+    margin-top:2.0pt;
     margin-right:0in;
     margin-bottom:0in;
     margin-left:0in;
@@ -58,21 +65,26 @@ h3
     font-size:12.0pt;
     font-family:"Calibri Light";
     color:#1F4D78;
-    font-weight:normal;}
+    font-weight:normal;
+}
 p.MsoToc1, li.MsoToc1, div.MsoToc1
-{margin-top:0in;
+{
+    margin-top:0in;
     margin-right:0in;
     margin-bottom:5.0pt;
     margin-left:0in;
     font-size:11.0pt;
-    font-family:Calibri;}
+    font-family:Calibri;
+}
 p.MsoToc2, li.MsoToc2, div.MsoToc2
-{margin-top:0in;
+{
+    margin-top:0in;
     margin-right:0in;
     margin-bottom:5.0pt;
     margin-left:11.0pt;
     font-size:11.0pt;
-    font-family:Calibri;}
+    font-family:Calibri;
+}
 p.MsoHeader, li.MsoHeader, div.MsoHeader
 {margin:0in;
     margin-bottom:.0001pt;
