Background image fix and some minor code styling for the index page. Also slight typo on the chart page.

--- a/Pages/Css/login.css
+++ b/Pages/Css/login.css
@@ -1,5 +1,5 @@
-body{    
-    background: url('../../Resources/Images/Horseshoe.jpg');
+body{
+    background: url('../../Resources/Images/Horseshoe.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -129,4 +129,3 @@ input{
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
    color:    #444;
 }
-
