provost demo updates

--- a/Pages/Css/login.css
+++ b/Pages/Css/login.css
@@ -1,3 +1,7 @@
+html{
+    background-color: transparent !important; 
+}
+
 body{
     background: url('../../Resources/Images/Horseshoe.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
